# GeckoSmartWatch

./: README.md
Android Application/GeckoWatch/: build.gradle.kts  settings.gradle.kts
Docs/images/: nrf52840_QFN48_pinout.psd  v4_1_QFN48_pinout.psd
Firmware/Gecko/: CMakeLists.txt  temp.txt
Firmware/Gecko/drivers/display/: CMakeLists.txt  gc9a01.c
Firmware/Gecko/dts/bindings/display/: buydisplay,gc9101.yaml
Firmware/Gecko/src/: clock.c  clock.h  console.h  lv_conf.h  main.c  system.h  testing.c  testing.h
Firmware/Gecko/src/BLE/: BLE.c  BLE.h  SmartWatchService.c  SmartWatchService.h
Firmware/Gecko/src/Peripherals/BMA400/: bma400.h  bma400_defs.h  common.c  common.h  taps.c  taps.h
Firmware/Gecko/src/Peripherals/Buzzer/: buzzer.c  buzzer.h
Firmware/Gecko/src/Peripherals/Display/: GC9A01A.c  GC9A01A.h  LCD.c  LCD.h  assets.c  assets.h  lvgl_layer.c  lvgl_layer.h
Firmware/Gecko/src/Peripherals/ExternalFlash/: externalFlash.c  externalFlash.h
Firmware/Gecko/src/Peripherals/Power/: battery.c  battery.h  fuel.c  fuel.h
Firmware/MinimumPowerTest/: CMakeLists.txt  devBoard.overlay  prj.conf
KiCad/DevelopmentBoard/: GeckoDevelopmentBoard.bak  GeckoDevelopmentBoard.kicad_pcb  GeckoDevelopmentBoard.kicad_prl  GeckoDevelopmentBoard.kicad_pro  GeckoDevelopmentBoard.kicad_sch  GeckoDevelopmentBoard.kicad_sym  GeckoDevelopmentBoard.step  fp-info-cache  fp-lib-table  peripherals.kicad_sch  power.kicad_sch  sym-lib-table
KiCad/GeckoSmartWatch_V4_1/: GeckoSmartWatch_V4_1.bak  GeckoSmartWatch_V4_1.kicad_pcb  GeckoSmartWatch_V4_1.kicad_prl  GeckoSmartWatch_V4_1.kicad_pro  GeckoSmartWatch_V4_1.kicad_sch  GeckoSmartWatch_V4_1.kicad_sym  GeckoSmartWatch_V4_1.step  Peripherals.kicad_sch  Power.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
KiCad/TagConnectAdapter/: TagConnectAdapter.kicad_pcb  TagConnectAdapter.kicad_prl  TagConnectAdapter.kicad_pro  TagConnectAdapter.kicad_sch  fp-info-cache  fp-lib-table
(+146 files in other folders)
